feat: add simple pagination and filter, bottom navigation home and favorite fragments

--- a/feature/coreui/src/main/res/values/strings.xml
+++ b/feature/coreui/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="dummy">dummy</string>
 
+    <!--Region main-->
+    <string name="menu_home_title">Home</string>
+    <string name="menu_favorite_title">Favorite</string>
 </resources>
